# ReapTide

./: AGENTS.md  ARCH.md  CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md
docs/: SPEC.md  design.md  requirements.md  tasks.md
src/: constants.rs  main.rs
src/achievements/: checker.rs  conditions.rs  mod.rs  registry.rs
src/assets/: loading.rs  mod.rs
src/audio/: mod.rs  sfx.rs
src/characters/: mod.rs  registry.rs
src/core/: event.rs  mod.rs  plugin.rs  state.rs
src/gameplay/: camera.rs  combat.rs  components.rs  enemies.rs  mod.rs  particles.rs  player.rs  resources.rs  ui.rs  upgrades.rs  xp.rs
src/gameplay/enemies/: brain.rs  mod.rs
src/gameplay/stats/: definitions.rs  mod.rs  modifier.rs
src/save/: mod.rs  profile.rs
src/shop/: catalog.rs  mod.rs  purchases.rs  ui.rs
src/ui/: components.rs  hud.rs  menu.rs  mod.rs  screen.rs  theme.rs
